# Razrabotka-moduly

./: README.md
01.04.2026 Laboratory Work 4/stack_1/: CMakeLists.txt  main.cpp  stack_1.cpp  stack_1.h  stack_1.ui
01.04.2026 Laboratory Work 4/stack_2/: CMakeLists.txt  main.cpp  stack_2.cpp  stack_2.h  stack_2.ui
10.04.2026 Laboratory Work 5/classmates/: CMakeLists.txt  classmates.cpp  classmates.h  classmates.ui  main.cpp
11.10/: Задание 2 и 3.docx
12.05.2026/after/: main.cpp
12.05.2026/before/: main.cpp
15.04.2026 Laboratory Work 6/: f
15.04.2026 Laboratory Work 6/file/: CMakeLists.txt  file.cpp  file.h  file.ui  main.cpp
18.03.2026 Class Nod/: main.cpp  nod.cpp  nod.h
24.01.2026/: Bank.py  book.py  example.py  students.py
25.03.2026 Laboratory Work 2/array/: CMakeLists.txt  array.cpp  array.h  array.ui  main.cpp
26.06.2026/Uspevaemosty/: CMakeLists.txt  averagewindow.cpp  averagewindow.h  database.h  forgotpasswordwindow.cpp  forgotpasswordwindow.h  gradeswindow.cpp  gradeswindow.h  loginwindow.cpp  loginwindow.h  main.cpp  parentmainwindow.cpp  parentmainwindow.h  parentmessageswindow.cpp  parentmessageswindow.h  quartergradeswindow.cpp  quartergradeswindow.h  schedulewindow.cpp  schedulewindow.h  studentmainwindow.cpp  studentmainwindow.h  studentmainwindow.ui  teachermainwindow.cpp  teachermainwindow.h
28.10/: bullet_sort.py
31.01.2026/: 1.py
31.01.2026-1/: 1-1.py
calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
project/: CMakeLists.txt  editor.cpp  editor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+32 files in other folders)
